<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
            android:fontFamily="@font/hk_grotesk_bold"
            android:text="@string/register_title"
            android:id="@+id/title"
            android:layout_marginTop="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/hk_grotesk_medium"
            android:id="@+id/subtitle"
            android:text="@string/register_subtitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_input_username"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:inputType="textAutoComplete"
                android:id="@+id/username"
                android:hint="@string/login_hint_username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_input_email"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintTop_toBottomOf="@id/layout_input_username"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:hint="@string/login_hint_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_input_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/layout_input_email"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/login_hint_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_daftar"
            app:layout_constraintTop_toBottomOf="@id/layout_input_password"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:id="@+id/btn_register"
            android:background="@color/blue"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/hk_grotesk_medium"
                android:textColor="@color/black"
                android:text="@string/register_to_login_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/hk_grotesk_semibold"
                android:id="@+id/go_login"
                android:textColor="@color/blue"
                android:text="@string/register_to_login"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>