<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingHorizontal="15dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_tops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="35dp"
                    android:src="@color/blue"
                    android:layout_height="35dp"
                    android:id="@+id/avatar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/names"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:fontFamily="@font/hk_grotesk_semibold"/>

            </LinearLayout>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searching"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/searching" />

        </RelativeLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carousel"
            app:layout_constraintTop_toBottomOf="@id/layout_tops"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/list_menu"
            app:layout_constraintTop_toBottomOf="@id/carousel"
            android:layout_marginVertical="25dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/list_menu"
            android:id="@+id/layout_favorite"
            android:layout_marginTop="25dp">


            <TextView
                android:id="@+id/title_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hk_grotesk_bold"
                android:text="@string/recomended"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboard_list_favorite"
                android:layout_width="match_parent"
                android:layout_below="@id/title_favorite"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_favorite"
            android:id="@+id/layout_terbaru"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/title_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hk_grotesk_bold"
                android:text="@string/terbaru"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboard_list_terbaru"
                android:layout_below="@id/title_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>